# lidar_camera_calib

./: CMakeLists.txt  README.md  package.xml
config/: calib.yaml  config_indoor.yaml  config_outdoor.yaml
include/: lidar_camera_calib.hpp
launch/: calib.launch.py
rviz_cfg/: calib.rviz
scripts/: extract_image_from_bag.py
src/: lidar_camera_calib.cpp
